--- a/pages/gallery/index.html
+++ b/pages/gallery/index.html
@@ -2,7 +2,7 @@
 
 {% block title %} Gallery — {{ block.super }} {% endblock %}
 
-{% block body_class %}geonode-features{% endblock %}
+{% block body_class %}geonode-features sites-gallery{% endblock %}
 
 {% block content %}
         <section class="banner">
@@ -45,7 +45,7 @@
                     <div class="span5">
                         <a href="http://geonode.ithacaweb.org"><img src="../static/img/cosa.png" width="325" height="189" alt="cosa" class="feature-img thumbnail" /></a>
                     </div>
-                   	 <div class="span7 number one">
+                    <div class="span7">
                        	      <div class="highlighted-box">
                           	  <h2>CoSA Web Application</h2>
                          	   <h4>Created by Ithaca</h4>
@@ -65,7 +65,7 @@
   	<section class="feature-details feature2" id="worldwide">
             <div class="container">
                 <div class="row">
-                    <div class="span7 number two">
+                    <div class="span7">
                         <div class="highlighted-box">
                             <h2>MASDAP</h2>
                             <h4>Created by GFDRR and the World Bank</h4>
@@ -92,7 +92,7 @@
                     <div class="span5">
                         <a href= "http://geonode.wfp.org"><img src="../static/img/wfp.png" width="325" height="189" alt="Iphone Geonode" class="feature-img thumbnail" /></a>
                     </div>
-                         <div class="span7 number three">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>WFP</strong></h2>
                                 <h4>The UN World Food Programme</h4>
@@ -110,7 +110,7 @@
         <section class="feature-details feature2" id="worldwide">
             <div class="container">
                 <div class="row">
-                         <div class="span7 number four">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>montagneAperte</strong></h2>
                                 <h4>GfosServices</h4>
@@ -133,7 +133,7 @@
                     <div class="span5">
                         <a href= "http://cariska.mona.uwi.edu"><img src="../static/img/cariska.png" width="325" height="189" alt="cariska" class="feature-img thumbnail" /></a>
                     </div>
-                         <div class="span7 number five">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>Caribbean Risk Atlas</strong></h2>
                                 <h4>UMI DRRC</h4>
@@ -150,7 +150,7 @@
         <section class="feature-details feature2" id="africa">
             <div class="container">
                 <div class="row">
-                         <div class="span7 number six">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>VirtualKenya.org</strong></h2>
                                 <h4>Upande Limied & WRI</h4>
@@ -177,7 +177,7 @@
                     <div class="span5">
                         <a href= "http://moz-adapt.org/"><img src="../static/img/moz.png" width="325" height="243" alt="moz" class="feature-img thumbnail" /></a>
                     </div>
-                         <div class="span7 number seven">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>Moz Adapt</strong></h2>
                                 <h4>INGC and The World Bank</h4>
@@ -198,7 +198,7 @@
         <section class="feature-details feature2" id="worldwide">
             <div class="container">
                 <div class="row">
-                         <div class="span7 number eight">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>Yemen Data</strong></h2>
                                 <h4>RCDRR & GFDRR</h4>
@@ -230,7 +230,7 @@
                     <div class="span5">
                         <a href= "http://paris.sopac.org"><img src="../static/img/paris.png" width="325" height="262" alt="paris" class="feature-img thumbnail" /></a>
                     </div>
-                         <div class="span7 number nine">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>PaRIS</strong></h2>
                                 <h4>SOPAC</h4>
@@ -254,7 +254,7 @@
             <section class="feature-details feature2" id="americas">
             <div class="container">
                 <div class="row">
-                         <div class="span7 number ten">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>HaitiData.org</strong></h2>
                                 <h4>The World Bank</h4>
@@ -283,7 +283,7 @@
                     <div class="span5">
                         <a href= "http://geonode.gov.vc"><img src="../static/img/vincent.png" width="325" height="178" alt="vincent" class="feature-img thumbnail" /></a>
                     </div>
-                         <div class="span7 number eleven">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>St. Vincent Geonode</strong></h2>
                                 <h4>&nbsp</h4>
@@ -301,7 +301,7 @@
         <section class="feature-details feature2" id="worldwide">
             <div class="container">
                 <div class="row">
-                         <div class="span7 number twelve">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>Golfgis.com</strong></h2>
                                 <h4>&nbsp</h4>
@@ -325,7 +325,7 @@
                     <div class="span5">
                         <img src="../static/img/bolivia.png" width="325" height="178" alt="bolivia" class="feature-img thumbnail" />
                     </div>
-                         <div class="span7 number thirteen">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>Bolivia Geonode</strong></h2>
                                 <h4>&nbsp</h4>
@@ -350,7 +350,7 @@
         <section class="feature-details feature2" id="worldwide">
             <div class="container">
                 <div class="row">
-                         <div class="span7 number fourteen">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>MapStory</strong></h2>
                                 <h4>MapStory Foundation</h4>
@@ -374,7 +374,7 @@
                     <div class="span5">
                         <a href= "http://cigno.ve.ismar.cnr.it/"><img src="../static/img/cigno.png" width="325" height="178" alt="vincent" class="feature-img thumbnail" /></a>
                     </div>
-                         <div class="span7 number fifteen">
+                         <div class="span7">
                              <div class="highlighted-box">
                                 <h2>CIGNo</strong></h2>
                                 <h4>National Council of Research ISMAR</h4>
