--- a/pages/communication/index.html
+++ b/pages/communication/index.html
@@ -2,18 +2,23 @@
 
 {% block title %} Communication — {{ block.super }} {% endblock %}
 
-{% block body_class %}geonode-features{% endblock %}
+{% block body_class %}communication{% endblock %}
 
 {% block content %}
         <section class="feature-detail">
             <div class="container">
                 <div class="row">
-                    <div class="span7">
-                        <h1>Communication</h1>
-						<h3>Email</h3>
-						<p>Email is by far the primary communication for GeoNode users and developers. We recommend all developers subscribe to both ‘user and ‘devel’ lists. Do not email individual developers, even if you know they can answer your question, as emailing the list will ensure it gets archived so that others in the future will be able to search for the same question.</p>
+                    <div class="span12">
+                        <article class="comm-email">
+                            <h1>Communication</h1>
+                            <h3>Email</h3>
+                            <p>Email is by far the primary communication for GeoNode users and developers. We recommend all developers subscribe to both ‘user and ‘devel’ lists. Do not email individual developers, even if you know they can answer your question, as emailing the list will ensure it gets archived so that others in the future will be able to search for the same question.</p>
+                        </article>
+                    </div>
+                    <div class="span4">
                         <article class="article1">
-                            <h5>Users Mailing Lists</h5>
+                            <img src="../static/img/icons/mailing_list_black.png" width="72" height="58" alt="" class="icon" />
+                            <h4>Users Mailing Lists</h4>
 							<p>This list is for users. It’s focused on questions about GeoNode itself, but it’s also great to post about topics around GeoNode, and implementations of projects on top of GeoNode. This can include customization of Django and other GeoNode libraries.</p>
 							<ul>
 								<li>Archive</li>
@@ -21,18 +26,22 @@
 								<li>Old Archive - we moved mailing list providers, so some questions may have been answered on the previous archive.</li>
 							</ul>
                         </article>
-
-                        <article id="mailing-lists" class="article2">
-                            <h5>Developer Mailing Lists</h5>
+                    </div>
+                    <div class="span4">
+                        <article id="mailing-lists" class="article1">
+                            <img src="../static/img/icons/mailing_list_black.png" width="72" height="58" alt="" class="icon" />
+                            <h4>Developer Mailing Lists</h4>
 							<p>This is where all active development of GeoNode takes place. If you’re knee deep in the code it’s the place to email. Traffic can be high, as we try to make most all conversations public so people know what’s going on.</p>
 							<ul>
 								<li>Archive</li>
 								<li>Subscription -  It’s a google group, so you need a google account to join</li>
 							</ul>
                         </article>
-
-                        <article id="irc" class="article2">
-                            <h5>IRC</h5>
+                    </div>
+                    <div class="span4">
+                        <article id="irc" class="article1">
+                            <img src="../static/img/icons/irc_black.png" width="81" height="80" alt="" class="icon" />
+                            <h4>IRC</h4>
 							<p>The GeoNode community is available on IRC for interactive question and answer.  You can often find active developers, helpful users, and all manner of activity. It can be a useful way to find a quick answer or interact on a problem.</p>
 
 <p>If you are new to IRC, you will need to find an IRC client (Pidgin, mIRC, or even Colloquy on mac).</p>
@@ -47,7 +56,6 @@
 								<li>Port – 6667</li>
 							</ul>
                         </article>
-
                     </div>
                 </div>
             </div>
